new-calendar.css
/* ... */
.fc-icon {
    width: 1em;
    height: 1em;
    user-select: none;
    font-family: fcicons !important;
    speak: none;
    font-style: normal;
    font-variant: normal;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale
}

.fc .fc-scroller-harness-liquid,
.fc .fc-scroller-liquid,
.fc .fc-scrollgrid-liquid {
    height: 100%
}

.fc-icon-chevron-left:before {
    content: "\e900"
}

.fc-icon-chevron-right:before {
    content: "\e901"
}

.fc-icon-chevrons-left:before {
    content: "\e902"
}

.fc-icon-chevrons-right:before {
    content: "\e903"
}

.fc-icon-minus-square:before {
    content: "\e904"
}

.fc-icon-plus-square:before {
    content: "\e905"
}

.fc-icon-x:before {
    content: "\e906"
}

.fc .fc-button {
    overflow: visible;
    text-transform: none;
    margin: 0;
    font-family: inherit
}

.fc .fc-button::-moz-focus-inner {
    padding: 0;
    border-style: none
}

.fc .fc-button {
    -webkit-appearance: button;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: transparent;
    border: 1px solid transparent;
    padding: .4em .65em;
    font-size: 1em;
    line-height: 1.5;
    border-radius: .25em
}

.fc .fc-button:hover {
    text-decoration: none
}

.fc .fc-button:focus {
    outline: 0;
    box-shadow: 0 0 0 .2rem rgba(44, 62, 80, .25)
}

.fc .fc-button-primary:focus,
.fc .fc-button-primary:not(:disabled).fc-button-active:focus,
.fc .fc-button-primary:not(:disabled):active:focus {
    box-shadow: 0 0 0 .2rem rgba(76, 91, 106, .5)
}

.fc .fc-button:disabled {
    opacity: .65
}

.fc .fc-button-primary {
    color: #fff;
    color: var(--fc-button-text-color, #fff);
    background-color: #2C3E50;
    background-color: var(--fc-button-bg-color, #2C3E50);
    border-color: #2C3E50;
    border-color: var(--fc-button-border-color, #2C3E50)
}

.fc .fc-button-primary:hover {
    color: #fff;
    color: var(--fc-button-text-color, #fff);
    background-color: #1e2b37;
    background-color: var(--fc-button-hover-bg-color, #1e2b37);
    border-color: #1a252f;
    border-color: var(--fc-button-hover-border-color, #1a252f)
}

.fc .fc-button-primary:disabled {
    color: #fff;
    color: var(--fc-button-text-color, #fff);
    background-color: #2C3E50;
    background-color: var(--fc-button-bg-color, #2C3E50);
    border-color: #2C3E50;
    border-color: var(--fc-button-border-color, #2C3E50)
}

.fc .fc-button-primary:not(:disabled).fc-button-active,
.fc .fc-button-primary:not(:disabled):active {
    color: #fff;
    color: var(--fc-button-text-color, #fff);
    background-color: #1a252f;
    background-color: var(--fc-button-active-bg-color, #1a252f);
    border-color: #151e27;
    border-color: var(--fc-button-active-border-color, #151e27)
}

.fc .fc-button .fc-icon {
    font-size: 1.5em
}

.fc .fc-button-group {
    position: relative;
    display: inline-flex
}

.fc .fc-button-group>.fc-button {
    position: relative;
    flex: 1 1 auto
}

.fc .fc-button-group>.fc-button.fc-button-active,
.fc .fc-button-group>.fc-button:active,
.fc .fc-button-group>.fc-button:focus,
.fc .fc-button-group>.fc-button:hover {
    z-index: 1
}

.fc-direction-ltr .fc-button-group>.fc-button:not(:first-child) {
    margin-left: -1px;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0
}

.fc-direction-ltr .fc-button-group>.fc-button:not(:last-child) {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0
}

.fc-direction-rtl .fc-button-group>.fc-button:not(:first-child) {
    margin-right: -1px;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0
}

.fc-direction-rtl .fc-button-group>.fc-button:not(:last-child) {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0
}

.fc .fc-toolbar {
    display: flex;
    justify-content: space-between;
    align-items: center
}

.fc-header-toolbar {
    padding-bottom: 1.5em;
    background-color: #0047B6
}

.fc .fc-toolbar.fc-footer-toolbar {
    margin-top: 1.5em
}

.fc .fc-toolbar-title {
    font-size: 1.75em;
    margin: 0;
    color: #FFF
}

.fc-direction-ltr .fc-toolbar>*>:not(:first-child) {
    margin-left: .75em
}

.fc-direction-rtl .fc-toolbar>*>:not(:first-child) {
    margin-right: .75em
}

.fc-direction-rtl .fc-toolbar-ltr {
    flex-direction: row-reverse
}

.fc .fc-scroller {
    -webkit-overflow-scrolling: touch;
    position: relative
}

.fc .fc-scroller-liquid-absolute {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0
}

.fc .fc-scroller-harness {
    position: relative;
    overflow: hidden;
    direction: ltr
}

.fc-direction-rtl .fc-scroller-harness>.fc-scroller {
    direction: rtl
}

.fc .fc-scrollgrid,
.fc .fc-scrollgrid-section-footer>*,
.fc .fc-scrollgrid-section-header>* {
    border-bottom-width: 0
}

.fc .fc-scrollgrid,
.fc .fc-scrollgrid table {
    width: 100%;
    table-layout: fixed
}

.fc .fc-scrollgrid table {
    border-top-style: hidden;
    border-left-style: hidden;
    border-right-style: hidden
}

.fc .fc-scrollgrid {
    border-collapse: separate;
    border-right-width: 0
}

.fc .fc-scrollgrid-section,
.fc .fc-scrollgrid-section table,
.fc .fc-scrollgrid-section>td {
    height: 1px
}

.fc .fc-scrollgrid-section-liquid>td {
    height: 100%
}

.fc .fc-scrollgrid-section>* {
    border-top-width: 0;
    border-left-width: 0
}

.fc .fc-scrollgrid-section-body table,
.fc .fc-scrollgrid-section-footer table {
    border-bottom-style: hidden
}

.fc .fc-scrollgrid-section-sticky>* {
    background: var(--fc-page-bg-color, #fff);
    position: sticky;
    z-index: 3
}

.fc .fc-scrollgrid-section-header.fc-scrollgrid-section-sticky>* {
    top: 0
}

.fc .fc-scrollgrid-section-footer.fc-scrollgrid-section-sticky>* {
    bottom: 0
}

.fc .fc-scrollgrid-sticky-shim {
    height: 1px;
    margin-bottom: -1px
}

.fc-sticky {
    position: sticky
}

.fc .fc-view-harness {
    flex-grow: 1;
    position: relative
}
/* ... */

